--- a/finder-app/Makefile
+++ b/finder-app/Makefile
@@ -1,26 +1,19 @@
-# Platform Overrides
-PLATFORM = HOST
-GCC = gcc
-ifeq ($(PLATFORM),HOST)
-  CC = $(GCC)
-  CFLAGS = -g -o $@ $^
-else
-  CC = aarch64-none-linux-gnu-$(GCC)
-  CFLAGS = -g -o $@ $^
-endif
+CC = $(CROSS_COMPILE)gcc
+CFLAGS =  -Wall -Werror
+
 SOURCES = writer.c
 OBJS = $(SOURCES:.c=.o)
 TARGET = $(OBJS:.o=)
 
 %.o : %.c
-	$(CC) $(CFLAGS)
+	$(CC) $(CFLAGS) -g -c -o $@ $<
 	@echo --created object file $@--
 
 .PHONY: build
 build: $(TARGET)
 
-$(TARGET):$(SOURCES)
-	$(CC) $(CFLAGS)
+$(TARGET):$(OBJS)
+	$(CC) $(CFLAGS) -g -o $@ $^
 
 .PHONY: clean
 clean:
